--- a/Css/index.css
+++ b/Css/index.css
@@ -92,7 +92,7 @@ margin-bottom: 30px;
 }
 .showcase h2,.showcase p{
     margin-bottom: 10px;
-    color: #f1f1f1;
+    color: #000;
     display: flex;
     flex-direction: column;
 
