(I change some build process in almost all html, css and javascript ffile except in three files showArticle.css, addArticl.js and contact.js. Also I  create admin Dashboard.)

--- a/Css/addarticle.css
+++ b/Css/addarticle.css
@@ -87,11 +87,66 @@ margin: 0 auto;
 .add-article.send-btn:hover{
     background: #0582e3;
 }
-.new-article{
+.add-articlexxxv{
     display: flex;
     flex-direction: column;
 
 }
-
+footer {
+    background-color: #333333;
+    padding: 20px;
+    margin-top: 20px;
+  }
+  
+  .rog .descr ol li a {
+    text-decoration: none;
+  }
+  
+  .skills {
+    width: 500px;
+    margin: 50px auto 0;
+    padding: 20px;
+  }
+  
+  .rog .lang {
+    margin-top: 50px;
+  }
+  
+  .rog .descr {
+    margin-top: 30px;
+  }
+  
+  #Contact .icons ul li {
+    display: inline;
+    text-align: center;
+    padding: 10px;
+  }
+  
+  .icons {
+    text-align: center;
+    margin: 10px 0;
+  }
+  
+  .fas {
+    color: white;
+  }
+  
+  .fas:hover {
+    color: #bf4080;
+  }
+  
+  .fab {
+    color: white;
+  }
+  
+  .fab:hover {
+    color: #bf4080;
+  }
+  
+  .Copyright {
+    text-align: center;
+    color: white;
+    border-top: #595959 solid 1px;
+  }
 
 
