--- a/Css/blog.css
+++ b/Css/blog.css
@@ -1,28 +1,164 @@
-body{
-    margin: 0 auto;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+*{
+    box-sizing: border-box;
+    margin: 0;
     padding: 0;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+}
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #fff;
+    color: #000;
+    font-size: 15px;
+    line-height: 1.5;
+
+}
+a{
+    color: #262626;
+    text-decoration:none;
+}
+ul{
+list-style: none;
+}  
+
+.container{
+    width: 90%;
+   max-width: 1100px;
+    margin: auto;
+}
+/*Nav*/
+.main-nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 60px;
+  padding:20px 0;
+  font-size: 13px;
+}
+.main-nav.logo{
+  width: 60px;
+  height: 100%;
+
+}
+.main-nav ul{
+  display: flex;
+}
+.main-nav ul li{
+  padding: 0 10px;
+}
+.main-nav ul li a{
+  padding-bottom: 2px; 
+}
+.main-nav ul li a:hover{
+  border-bottom: 2px solid #262626;
+  
+}
+.main-nav ul.main-menu{
+  flex:1;
+  margin-left: 20px;   
+}
+.menu-btn{
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  z-index: 2;
+  display: none;
+}
+.btn{
+  cursor: pointer;
+  display: inline-block;
+  border: 0;
+  font-weight: bold;
+  padding: 10px 20px;
+  background: #262626;
+  color: #fff;
+  font-size: 15px;
+}
+.btn:hover{
+  opacity: 0.9;
+}
+h1{
+  display: grid;
+  flex-direction: column;
+  align-content: center;
+  width: 250px;
+  background: #333;
+  color: #fff;
+  margin: 0 auto;
 }
 .articles{
-	display: flex;
-	flex-direction: column;
+
+border-bottom: 1px solid rgb(49, 45, 45);
 	margin: 0 auto;
+}
+.articleImg{
+  display: flex;
+  flex-direction: column;
 }
 .personalArticles{
 margin-top: 20px;
-background: grey;
-color: white;
+color: black;
 display: flex;
-flex-direction: column;
+border: 1px solid black;
 padding: 20px;
 font-size: 25px;
-border-radius: 18px;
 width: 95%;
+}
+.personalArticles img{
+  align-self: flex-start;
 }
 a{
 	text-decoration: none;
+}
+footer {
+  background-color: #333333;
+  padding: 20px;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.rog .descr ol li a {
+  text-decoration: none;
+}
+
+.rog .lang {
+  margin-top: 50px;
+}
+
+.rog .descr {
+  margin-top: 30px;
+}
+
+#Contact .icons ul li {
+  display: inline;
+  text-align: center;
+  padding: 10px;
+}
+
+.icons {
+  text-align: center;
+  margin: 10px 0;
+}
+
+.fas {
+  color: white;
+}
+
+.fas:hover {
+  color: #bf4080;
+}
+
+.fab {
+  color: white;
+}
+
+.fab:hover {
+  color: #bf4080;
+}
+
+.Copyright {
+  text-align: center;
+  color: white;
+  border-top: #595959 solid 1px;
 }
