--- a/Css/contact.css
+++ b/Css/contact.css
@@ -8,7 +8,7 @@
 }
 body{
     min-height: 100vh;
-    background: #ffffff ;
+    background:  rgb(235, 229, 229);
     display: flex;
     justify-content: center;
     color: #000;
@@ -81,8 +81,6 @@ list-style: none;
 /* Showcae*/
 .showcase{
     width: 100%;
-    height: 400px;
-    background: url('../images/gatera.jpg') no-repeat center center/cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -92,9 +90,15 @@ list-style: none;
     margin-bottom: 30px;
     }
     .showcase h2,.showcase p{
-        margin-bottom: 10px;
-        color: #161616;
     
+        margin-bottom: 10px;
+        color: #000;
+    
+    }
+    .showcase img{
+       
+        width: 300px;
+        border-radius: 50%;
     }
     .showcase .btn{
         margin-top: 20px;
@@ -139,8 +143,8 @@ margin-right: 50px;
     margin-bottom: 30px;
 }
 .contact-form .text-box{
-    background: #000;
-    color: #fff;
+    background: #fff;
+    color: #000;
     border: none;
     width: calc(50%-10px);
     height: 50px;
@@ -155,8 +159,8 @@ margin-right: 50px;
     margin-right: 15px;
 }
 .contact-form textarea{
-    background: #000;
-    color: #fff;
+    background: #fff;
+    color: #000;
     border: none;
     width: 100%;
     padding: 12px;
@@ -171,7 +175,7 @@ margin-right: 50px;
 }
 .contact-form .send-btn{
     float:right;
-    background: #2E94E3;
+    background: #000;
     color: #fff;
     border: none;
     width: 120px;
@@ -187,57 +191,65 @@ margin-right: 50px;
 .contact-form .send-btn:hover{
     background: #0582e3;
 }
+footer {
 
+    background-color: #333333;
+    padding: 20px;
+    margin-top: 20px;
+    margin: 0px;
+  }
+  
+  .rog .descr ol li a {
+    text-decoration: none;
+  }
+  
+  .skills {
+    width: 500px;
+    margin: 50px auto 0;
+    padding: 20px;
+  }
+  
+  .rog .lang {
+    margin-top: 50px;
+  }
+  
+  .rog .descr {
+    margin-top: 30px;
+  }
+  
+  #Contact .icons ul li {
+    display: inline;
+    text-align: center;
+    padding: 10px;
+  }
+  
+  .icons {
+    text-align: center;
+    margin: 10px 0;
+  }
+  
+  .fas {
+    color: white;
+  }
+  
+  .fas:hover {
+    color: #bf4080;
+  }
+  
+  .fab {
+    color: white;
+  }
+  
+  .fab:hover {
+    color: #bf4080;
+  }
+  
+  .Copyright {
+    text-align: center;
+    color: white;
+    border-top: #595959 solid 1px;
+  }
 
-/* Folow */
-.follow{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin: 30px 0 30px;
-}
-.follow *{
-    margin-right: 10px;
-}
-
-/* Footer*/
-.footer{
-    background: #f2f2f2;
-    color: #616161;
-    font-size: 12px;
-    padding: 20px 0;
-    left: 0;
-bottom: 0;
-text-align: center;
-position: fixed;
-width: 100%;
-}
-.footer-inner{
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 20px 0 20px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    
-}
-.footer div{
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.footer div i{
-    margin-right: 10px;
-}
-.footer ul{
-    display: flex;
-    flex-wrap: wrap;
-}
-.footer li{
-margin-right: 30px;
-margin-bottom: 20px;
-}
 @media(max-width: 700px){
     .menu-btn{
         display: block;
