--- a/Css/login.css
+++ b/Css/login.css
@@ -168,45 +168,63 @@ img{
 .links li{
     line-height: 2.8;
 }
-/* Footer*/
-.footer{
-    background: #f2f2f2;
-    color: #616161;
-    font-size: 12px;
-    padding: 20px 0;
-margin-bottom: 0px;
-left: 0;
-bottom: 0;
-text-align: center;
-position: fixed;
-width: 100%;
-}
-.footer-inner{
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 20px 0 20px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-}
-.footer div{
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.footer div i{
-    margin-right: 10px;
-}
-.footer ul{
-    display: flex;
-    flex-wrap: wrap;
+footer {
+    background-color: #333333;
+    padding: 20px;
+    margin-top: 20px;
+  }
+  
+  .rog .descr ol li a {
+    text-decoration: none;
+  }
+  
+  .skills {
+    width: 500px;
+    margin: 50px auto 0;
+    padding: 20px;
+  }
+  
+  .rog .lang {
+    margin-top: 50px;
+  }
+  
+  .rog .descr {
+    margin-top: 30px;
+  }
+  
+  #Contact .icons ul li {
+    display: inline;
+    text-align: center;
+    padding: 10px;
+  }
+  
+  .icons {
+    text-align: center;
+    margin: 10px 0;
+  }
+  
+  .fas {
+    color: white;
+  }
+  
+  .fas:hover {
+    color: #bf4080;
+  }
+  
+  .fab {
+    color: white;
+  }
+  
+  .fab:hover {
+    color: #bf4080;
+  }
+  
+  .Copyright {
+    text-align: center;
+    color: white;
+    border-top: #595959 solid 1px;
+  }
 
-}
-.footer li{
-margin-right: 30px;
-margin-bottom: 20px;
-}
 @media(max-width: 700px){
    
 }
