--- a/Css/blog.css
+++ b/Css/blog.css
@@ -1,63 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #fff;
-    color: #000;
-    font-size: 15px;
-    line-height: 1.5;
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background: #fff;
+  color: #000;
+  font-size: 15px;
+  line-height: 1.5;
+}
+a {
+  color: #262626;
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
 
-}
-a{
-    color: #262626;
-    text-decoration:none;
-}
-ul{
-list-style: none;
-}  
-
-.container{
-    width: 90%;
-   max-width: 1100px;
-    margin: auto;
+.container {
+  width: 110%;
+  max-width: 1100px;
+  margin: auto;
 }
 /*Nav*/
-.main-nav{
+.main-nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 60px;
-  padding:20px 0;
+  padding: 20px 0;
   font-size: 13px;
 }
-.main-nav.logo{
-  width: 60px;
-  height: 100%;
-
+.main-nav img {
+  width: 80px;
+  height: 40px;
 }
-.main-nav ul{
+.main-nav ul {
   display: flex;
 }
-.main-nav ul li{
+.main-nav ul li {
   padding: 0 10px;
 }
-.main-nav ul li a{
-  padding-bottom: 2px; 
+.main-nav ul li a {
+  padding-bottom: 2px;
 }
-.main-nav ul li a:hover{
+.main-nav ul li a:hover {
   border-bottom: 2px solid #262626;
-  
 }
-.main-nav ul.main-menu{
-  flex:1;
-  margin-left: 20px;   
+.main-nav ul.main-menu {
+  flex: 1;
+  margin-left: 20px;
 }
-.menu-btn{
+.menu-btn {
   cursor: pointer;
   position: absolute;
   top: 20px;
@@ -65,7 +62,7 @@ list-style: none;
   z-index: 2;
   display: none;
 }
-.btn{
+.btn {
   cursor: pointer;
   display: inline-block;
   border: 0;
@@ -75,10 +72,10 @@ list-style: none;
   color: #fff;
   font-size: 15px;
 }
-.btn:hover{
+.btn:hover {
   opacity: 0.9;
 }
-h1{
+h1 {
   display: grid;
   flex-direction: column;
   align-content: center;
@@ -87,34 +84,41 @@ h1{
   color: #fff;
   margin: 0 auto;
 }
-.articles{
-
-border-bottom: 1px solid rgb(49, 45, 45);
-	margin: 0 auto;
+.articles {
+  margin-right: 20px;
 }
-.articleImg{
+.articleImg {
   display: flex;
   flex-direction: column;
+  
 }
-.personalArticles{
-margin-top: 20px;
-color: black;
-display: flex;
-border: 1px solid black;
-padding: 20px;
-font-size: 25px;
-width: 95%;
+.personalArticles {
+  margin-top: 20px;
+  color: black;
+  display: flex;
+  border: 1px solid black;
+  padding: 20px;
+  font-size: 25px;
+  width: 95%;
+  margin-right: 50px;
 }
-.personalArticles img{
+.personalArticles img {
   align-self: flex-start;
+  height: 100px;
+  width: 200px;
 }
-a{
-	text-decoration: none;
+a {
+  text-decoration: none;
+}
+span {
+  margin: 7px;
 }
 footer {
   background-color: #333333;
   padding: 20px;
   margin-top: 20px;
+  position: absolute;
+  bottom: 0px;
   width: 100%;
 }
 
@@ -130,6 +134,9 @@ footer {
   margin-top: 30px;
 }
 
+img {
+  width: 150px;
+}
 #Contact .icons ul li {
   display: inline;
   text-align: center;
@@ -161,4 +168,167 @@ footer {
   text-align: center;
   color: white;
   border-top: #595959 solid 1px;
+}
+@media (max-width: 700px) {
+  .menu-btn {
+    display: block;
+  }
+  .menu-btn:hover {
+    opacity: 0.5;
+  }
+  .main-nav ul.right-menu {
+    margin-right: 50px;
+  }
+  .main-nav ul.main-menu {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #f2f2f2;
+    width: 50%;
+    height: 100%;
+    border-right: #ccc 1px solid;
+    opacity: 0.9;
+    padding: 30px;
+    transform: translateX(-500px);
+    transition: transform 0.5s ease-in-out;
+  }
+  .main-nav ul.main-menu li {
+    padding: 10px;
+    border-bottom: #ccc solid 1px;
+    font-size: 14px;
+  }
+  .main-nav ul.main-menu li:last-child {
+    border-bottom: 0;
+  }
+
+  .main-nav ul.main-menu.show {
+    transform: translateX(-20px);
+  }
+  .skills .Projects {
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+  }
+  .xbox .content p {
+    display: none;
+  }
+  .xbox .content h2 {
+    margin-bottom: 20px;
+  }
+  .carbon .content {
+    width: 85%;
+  }
+  .links .links-inner {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 480px) {
+  .skill img {
+    width: 400px;
+    height: 400px;
+  }
+  .skills .Projects {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
+  .links .links-inner {
+    grid-template-columns: 1fr;
+  }
+  .links .links-inner ul {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contact-section {
+    flex-direction: column;
+  }
+  .contact-info,
+  .contact-form {
+    margin: 30px 50px;
+  }
+  .contact-form h2 {
+    font-size: 30px;
+  }
+  .contact-form .text-box {
+    width: 100%;
+  }
+}
+.alert-success {
+  z-index: 1;
+  background: #d4edd1;
+  font-size: 18px;
+  padding: 20px 40px;
+  min-width: 420px;
+  position: fixed;
+  right: 0;
+  top: 10px;
+  border-left: 8px solid #3ad66e;
+  border-radius: 4px;
+}
+.alert-error {
+  z-index: 1;
+  background: #fff3cd;
+  font-size: 18px;
+  padding: 20px 40px;
+  min-width: 420px;
+  position: fixed;
+  right: 0;
+  top: 10px;
+  border-left: 8px solid #ffa502;
+  border-radius: 4px;
+}
+/*responsive */
+@media (max-width: 800px) {
+  .left-column,
+  .right-column {
+    width: 100%;
+    padding: 0px;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .side-nav {
+    width: 200px;
+  }
+  .side-nav ul li {
+    text-align: left;
+  }
+  .side-nav ul li span:nth-child(2) {
+    display: inline;
+  }
+  .side-nav ul li i {
+    font-size: 40px;
+  }
+  .main-content {
+    margin-left: 200px;
+  }
+}
+
+span {
+  /* enforces that text is re-aligned depending on browser or screen width */
+
+  word-wrap: break-word;
+}
+
+/* Incase the screen size is that of a tablet landscape size or above */
+
+@media only screen and (min-width: 769px) {
+  span {
+    font-size: 14px;
+  }
+}
+
+/* mobile landscape size to a tablet portrait size */
+
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  span {
+    font-size: 12px;
+  }
+}
+
+/* mobile portrait size or below */
+
+@media only screen and (max-width: 480px) {
+  span {
+    font-size: 11px;
+  }
 }
