--- a/Css/articleDashboard.css
+++ b/Css/articleDashboard.css
@@ -101,7 +101,7 @@ input[type="submit"] {
   z-index: 10;
 }
 .header-topo {
-  background-color: #b5b8b7;
+  background-color: #008658;
   height: 60px;
   position: relative;
 }
@@ -119,7 +119,7 @@ input[type="submit"] {
   left: 200px;
   height: 60px;
   width: 60px;
-  background-color: #828584;
+  background-color: #00784f;
   text-align: center;
   cursor: pointer;
 }
@@ -127,7 +127,7 @@ input[type="submit"] {
   display: inline-block;
 }
 .header-controlMenuButton:hover {
-  background-color: #8e8f8f;
+  background-color: #005a3b;
 }
 .header-search {
   width: 260px;
@@ -182,7 +182,7 @@ input[type="submit"] {
   height: 2px;
   left: 0;
   display: none;
-  background-color: #414242;
+  background-color: #008658;
 }
 #header .menu-modulos .menu-modulosBt:hover .menu-modulosFeed {
   display: block;
@@ -340,7 +340,7 @@ input[type="submit"] {
 }
 .shape-remove-shadow_green {
   position: absolute;
-  background: #282928;
+  background: #008658;
   height: 60px;
   width: 10px;
   right: -3px;
@@ -372,7 +372,7 @@ input[type="submit"] {
 #conteudo .conteudo-wrapper {
   padding: 40px;
 }
-#conteudo .conteudo-box .personalArticles{
+#conteudo .conteudo-box {
   background-color: #ffffff;
   border-bottom: 1px solid #e4e5e6;
   -webkit-box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.1);
@@ -386,7 +386,7 @@ input[type="submit"] {
 #conteudo .conteudo-title {
   font-size: 24px;
   line-height: 28px;
-  color: #1c1d1c;
+  color: #008658;
   font-weight: 300;
   margin-bottom: 5px;
   display: block;
@@ -562,9 +562,6 @@ input[type="submit"] {
 }
 .articles {
   width: 60%;
-  margin-left: 250px;
-  margin-right: 250px;
-  padding-right: 20px;
 }
 .personalArticles {
   margin-top: 20px;
@@ -576,45 +573,11 @@ input[type="submit"] {
   font-size: 25px;
   width: 100%;
   font-size: 1em;
-  /* margin-top: 56px; */
-  /* margin-left: 780px; */
 }
 .personalArticles img {
   align-self: flex-start;
   width: 150px;
   height: 100px;
-}
-a {
-  color: #000;
-  text-decoration: none;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-span {
-  padding: 15px;
-}
-button {
-  display: inline;
-  padding: 8px;
-  margin: 8px;
-  background: grey;
-  color: white;
-  align-items: flex-end;
-}
-.logout {
-  color: rgb(250, 249, 249);
-  cursor: pointer;
-  padding: 10px;
-}
-.actionBlock {
-  /* background-color: grey; */
-}
-.modify {
-  /* width: 50px;
-  height: 30px;
-  background-color: white;
-  color: black;
-  text-align: center; */
 }
 
 @media screen and (max-width: 768px) {
@@ -684,157 +647,6 @@ button {
   width: 100%;
 }
 
-.col-2,
-.col-1-2,
-.col-5-10,
-.col-4-8,
-.col-3-6,
-.col-2-4 {
-  width: 50%;
-}
-
-.col-3,
-.col-1-3,
-.col-3-9,
-.col-2-6 {
-  width: 33.3333%;
-}
-
-.col-4,
-.col-1-4,
-.col-2-8 {
-  width: 25%;
-}
-
-.col-5,
-.col-1-5,
-.col-2-10 {
-  width: 20%;
-}
-
-.col-6,
-.col-1-6 {
-  width: 16.6666%;
-}
-
-.col-7,
-.col-1-7 {
-  width: 14.2857%;
-}
-
-.col-8,
-.col-1-8 {
-  width: 12.5%;
-}
-
-.col-9,
-.col-1-9 {
-  width: 11.1111%;
-}
-
-.col-10,
-.col-1-10 {
-  width: 10%;
-}
-
-.col-2-3 {
-  width: 66.6666%;
-}
-
-.col-2-5 {
-  width: 40%;
-}
-
-.col-2-7 {
-  width: 28.5714%;
-}
-
-.col-2-9 {
-  width: 22.2222%;
-}
-
-.col-3-4 {
-  width: 75%;
-}
-.col-3-5 {
-  width: 60%;
-}
-
-.col-3-7 {
-  width: 42.8571%;
-}
-.col-3-8 {
-  width: 37.5%;
-}
-
-.col-3-10 {
-  width: 30%;
-}
-
-.col-4-5 {
-  width: 80%;
-}
-.col-4-6 {
-  width: 66.6666%;
-}
-.col-4-7 {
-  width: 57.1428%;
-}
-
-.col-4-9 {
-  width: 44.4444%;
-}
-.col-4-10 {
-  width: 40%;
-}
-
-.col-5-6 {
-  width: 83.3333%;
-}
-.col-5-7 {
-  width: 71.4285%;
-}
-.col-5-8 {
-  width: 62.5%;
-}
-.col-5-9 {
-  width: 55.5555%;
-}
-
-.col-6-7 {
-  width: 82.7142%;
-}
-.col-6-8 {
-  width: 75%;
-}
-.col-6-9 {
-  width: 66.6666%;
-}
-.col-6-10 {
-  width: 60%;
-}
-
-.col-7-8 {
-  width: 87.5%;
-}
-.col-7-9 {
-  width: 77.7777%;
-}
-.col-7-10 {
-  width: 70%;
-}
-
-.col-8-9 {
-  width: 88.8888%;
-}
-.col-8-10 {
-  width: 80%;
-}
-
-.col-9-10 {
-  width: 90%;
-}
-
 /*--------------	Media queries	------------------*/
 /*
 	* < 568px
@@ -851,159 +663,22 @@ button {
     display: block !important;
   }
 
-  .col-xs-2,
-  .col-xs-1-2,
-  .col-xs-5-10,
-  .col-xs-4-8,
-  .col-xs-3-6,
-  .col-xs-2-4 {
-    width: 50%;
+  .personalArticles {
+    display: flex;
+    flex-direction: column;
+    width: 80vw;
+  }
+  .personalArticles img {
+    height: 100%;
+    width: 60vw;
   }
 
-  .col-xs-3,
-  .col-xs-1-3,
-  .col-xs-3-9,
-  .col-xs-2-6 {
-    width: 33.3333%;
-  }
-
-  .col-xs-4,
-  .col-xs-1-4,
-  .col-xs-2-8 {
-    width: 25%;
-  }
-
-  .col-xs-5,
-  .col-xs-1-5,
-  .col-xs-2-10 {
-    width: 20%;
-  }
-
-  .col-xs-6,
-  .col-xs-1-6 {
-    width: 16.6666%;
-  }
-
-  .col-xs-7,
-  .col-xs-1-7 {
-    width: 14.2857%;
-  }
-
-  .col-xs-8,
-  .col-xs-1-8 {
-    width: 12.5%;
-  }
-
-  .col-xs-9,
-  .col-xs-1-9 {
-    width: 11.1111%;
-  }
-
-  .col-xs-10,
-  .col-xs-1-10 {
-    width: 10%;
-  }
-
-  .col-xs-2-3 {
-    width: 66.6666%;
-  }
-
-  .col-xs-2-5 {
-    width: 40%;
-  }
-
-  .col-xs-2-7 {
-    width: 28.5714%;
-  }
-
-  .col-xs-2-9 {
-    width: 22.2222%;
-  }
-
-  .col-xs-3-4 {
-    width: 75%;
-  }
-  .col-xs-3-5 {
-    width: 60%;
-  }
-
-  .col-xs-3-7 {
-    width: 42.8571%;
-  }
-  .col-xs-3-8 {
-    width: 37.5%;
-  }
-
-  .col-xs-3-10 {
-    width: 30%;
-  }
-
-  .col-xs-4-5 {
-    width: 80%;
-  }
-  .col-xs-4-6 {
-    width: 66.6666%;
-  }
-  .col-xs-4-7 {
-    width: 57.1428%;
-  }
-
-  .col-xs-4-9 {
-    width: 44.4444%;
-  }
-  .col-xs-4-10 {
-    width: 40%;
-  }
-
-  .col-xs-5-6 {
-    width: 83.3333%;
-  }
-  .col-xs-5-7 {
-    width: 71.4285%;
-  }
-  .col-xs-5-8 {
-    width: 62.5%;
-  }
-  .col-xs-5-9 {
-    width: 55.5555%;
-  }
-
-  .col-xs-6-7 {
-    width: 82.7142%;
-  }
-  .col-xs-6-8 {
-    width: 75%;
-  }
-  .col-xs-6-9 {
-    width: 66.6666%;
-  }
-  .col-xs-6-10 {
-    width: 60%;
-  }
-
-  .col-xs-7-8 {
-    width: 87.5%;
-  }
-  .col-xs-7-9 {
-    width: 77.7777%;
-  }
-  .col-xs-7-10 {
-    width: 70%;
-  }
-
-  .col-xs-8-9 {
-    width: 88.8888%;
-  }
-  .col-xs-8-10 {
-    width: 80%;
-  }
-
-  .col-xs-9-10 {
-    width: 90%;
-  }
-  .personalArticles .responsive a  {
+  .personalArticles .responsive a {
     width: 100%;
     position: relative;
+  }
+  .conteudo-boxInner {
+    width: 100%;
   }
 }
 
@@ -1022,162 +697,30 @@ button {
     display: block !important;
   }
 
-  .col-sm-2,
-  .col-sm-1-2,
-  .col-sm-5-10,
-  .col-sm-4-8,
-  .col-sm-3-6,
-  .col-sm-2-4 {
-    width: 50%;
+  .personalArticles {
+    display: flex;
+    flex-direction: column;
+    width: 80vw;
+    left: auto;
+  }
+  .personalArticles img {
+    /*align-self: flex-start;*/
+    height: 100%;
+    /* width: 25%; */
+    width: 60vw;
+    /* margin-left: 50px; */
   }
 
-  .col-sm-3,
-  .col-sm-1-3,
-  .col-sm-3-9,
-  .col-sm-2-6 {
-    width: 33.3333%;
-  }
-
-  .col-sm-4,
-  .col-sm-1-4,
-  .col-sm-2-8 {
-    width: 25%;
-  }
-
-  .col-sm-5,
-  .col-sm-1-5,
-  .col-sm-2-10 {
-    width: 20%;
-  }
-
-  .col-sm-6,
-  .col-sm-1-6 {
-    width: 16.6666%;
-  }
-
-  .col-sm-7,
-  .col-sm-1-7 {
-    width: 14.2857%;
-  }
-
-  .col-sm-8,
-  .col-sm-1-8 {
-    width: 12.5%;
-  }
-
-  .col-sm-9,
-  .col-sm-1-9 {
-    width: 11.1111%;
-  }
-
-  .col-sm-10,
-  .col-sm-1-10 {
-    width: 10%;
-  }
-
-  .col-sm-2-3 {
-    width: 66.6666%;
-  }
-
-  .col-sm-2-5 {
-    width: 40%;
-  }
-
-  .col-sm-2-7 {
-    width: 28.5714%;
-  }
-
-  .col-sm-2-9 {
-    width: 22.2222%;
-  }
-
-  .col-sm-3-4 {
-    width: 75%;
-  }
-  .col-sm-3-5 {
-    width: 60%;
-  }
-
-  .col-sm-3-7 {
-    width: 42.8571%;
-  }
-  .col-sm-3-8 {
-    width: 37.5%;
-  }
-
-  .col-sm-3-10 {
-    width: 30%;
-  }
-
-  .col-sm-4-5 {
-    width: 80%;
-  }
-  .col-sm-4-6 {
-    width: 66.6666%;
-  }
-  .col-sm-4-7 {
-    width: 57.1428%;
-  }
-
-  .col-sm-4-9 {
-    width: 44.4444%;
-  }
-  .col-sm-4-10 {
-    width: 40%;
-  }
-
-  .col-sm-5-6 {
-    width: 83.3333%;
-  }
-  .col-sm-5-7 {
-    width: 71.4285%;
-  }
-  .col-sm-5-8 {
-    width: 62.5%;
-  }
-  .col-sm-5-9 {
-    width: 55.5555%;
-  }
-
-  .col-sm-6-7 {
-    width: 82.7142%;
-  }
-  .col-sm-6-8 {
-    width: 75%;
-  }
-  .col-sm-6-9 {
-    width: 66.6666%;
-  }
-  .col-sm-6-10 {
-    width: 60%;
-  }
-
-  .col-sm-7-8 {
-    width: 87.5%;
-  }
-  .col-sm-7-9 {
-    width: 77.7777%;
-  }
-  .col-sm-7-10 {
-    width: 70%;
-  }
-
-  .col-sm-8-9 {
-    width: 88.8888%;
-  }
-  .col-sm-8-10 {
-    width: 80%;
-  }
-
-  .col-sm-9-10 {
-    width: 90%;
+  .personalArticles .responsive a {
+    width: 100%;
+    position: relative;
   }
 }
 
 /*
 	* > 768px e < 1024px
 */
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 48em) and (max-width: 64em) {
   .col-md-1 {
     width: 100% !important;
   }
@@ -1189,155 +732,20 @@ button {
     display: block !important;
   }
 
-  .col-md-2,
-  .col-md-1-2,
-  .col-md-5-10,
-  .col-md-4-8,
-  .col-md-3-6,
-  .col-md-2-4 {
-    width: 50%;
+  .personalArticles {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    /* left: auto; */
+  }
+  .personalArticles img {
+    height: 100%;
+    width: 100%;
   }
 
-  .col-md-3,
-  .col-md-1-3,
-  .col-md-3-9,
-  .col-md-2-6 {
-    width: 33.3333%;
-  }
-
-  .col-md-4,
-  .col-md-1-4,
-  .col-md-2-8 {
-    width: 25%;
-  }
-
-  .col-md-5,
-  .col-md-1-5,
-  .col-md-2-10 {
-    width: 20%;
-  }
-
-  .col-md-6,
-  .col-md-1-6 {
-    width: 16.6666%;
-  }
-
-  .col-md-7,
-  .col-md-1-7 {
-    width: 14.2857%;
-  }
-
-  .col-md-8,
-  .col-md-1-8 {
-    width: 12.5%;
-  }
-
-  .col-md-9,
-  .col-md-1-9 {
-    width: 11.1111%;
-  }
-
-  .col-md-10,
-  .col-md-1-10 {
-    width: 10%;
-  }
-
-  .col-md-2-3 {
-    width: 66.6666%;
-  }
-
-  .col-md-2-5 {
-    width: 40%;
-  }
-
-  .col-md-2-7 {
-    width: 28.5714%;
-  }
-
-  .col-md-2-9 {
-    width: 22.2222%;
-  }
-
-  .col-md-3-4 {
-    width: 75%;
-  }
-  .col-md-3-5 {
-    width: 60%;
-  }
-
-  .col-md-3-7 {
-    width: 42.8571%;
-  }
-  .col-md-3-8 {
-    width: 37.5%;
-  }
-
-  .col-md-3-10 {
-    width: 30%;
-  }
-
-  .col-md-4-5 {
-    width: 80%;
-  }
-  .col-md-4-6 {
-    width: 66.6666%;
-  }
-  .col-md-4-7 {
-    width: 57.1428%;
-  }
-
-  .col-md-4-9 {
-    width: 44.4444%;
-  }
-  .col-md-4-10 {
-    width: 40%;
-  }
-
-  .col-md-5-6 {
-    width: 83.3333%;
-  }
-  .col-md-5-7 {
-    width: 71.4285%;
-  }
-  .col-md-5-8 {
-    width: 62.5%;
-  }
-  .col-md-5-9 {
-    width: 55.5555%;
-  }
-
-  .col-md-6-7 {
-    width: 82.7142%;
-  }
-  .col-md-6-8 {
-    width: 75%;
-  }
-  .col-md-6-9 {
-    width: 66.6666%;
-  }
-  .col-md-6-10 {
-    width: 60%;
-  }
-
-  .col-md-7-8 {
-    width: 87.5%;
-  }
-  .col-md-7-9 {
-    width: 77.7777%;
-  }
-  .col-md-7-10 {
-    width: 70%;
-  }
-
-  .col-md-8-9 {
-    width: 88.8888%;
-  }
-  .col-md-8-10 {
-    width: 80%;
-  }
-
-  .col-md-9-10 {
-    width: 90%;
+  .personalArticles .responsive a {
+    width: 100%;
+    position: relative;
   }
 }
 
@@ -1356,411 +764,4 @@ button {
   .col-lg-show {
     display: block !important;
   }
-
-  .col-lg-2,
-  .col-lg-1-2,
-  .col-lg-5-10,
-  .col-lg-4-8,
-  .col-lg-3-6,
-  .col-lg-2-4 {
-    width: 50%;
-  }
-
-  .col-lg-3,
-  .col-lg-1-3,
-  .col-lg-3-9,
-  .col-lg-2-6 {
-    width: 33.3333%;
-  }
-
-  .col-lg-4,
-  .col-lg-1-4,
-  .col-lg-2-8 {
-    width: 25%;
-  }
-
-  .col-lg-5,
-  .col-lg-1-5,
-  .col-lg-2-10 {
-    width: 20%;
-  }
-
-  .col-lg-6,
-  .col-lg-1-6 {
-    width: 16.6666%;
-  }
-
-  .col-lg-7,
-  .col-lg-1-7 {
-    width: 14.2857%;
-  }
-
-  .col-lg-8,
-  .col-lg-1-8 {
-    width: 12.5%;
-  }
-
-  .col-lg-9,
-  .col-lg-1-9 {
-    width: 11.1111%;
-  }
-
-  .col-lg-10,
-  .col-lg-1-10 {
-    width: 10%;
-  }
-
-  .col-lg-2-3 {
-    width: 66.6666%;
-  }
-
-  .col-lg-2-5 {
-    width: 40%;
-  }
-
-  .col-lg-2-7 {
-    width: 28.5714%;
-  }
-
-  .col-lg-2-9 {
-    width: 22.2222%;
-  }
-
-  .col-lg-3-4 {
-    width: 75%;
-  }
-  .col-lg-3-5 {
-    width: 60%;
-  }
-
-  .col-lg-3-7 {
-    width: 42.8571%;
-  }
-  .col-lg-3-8 {
-    width: 37.5%;
-  }
-
-  .col-lg-3-10 {
-    width: 30%;
-  }
-
-  .col-lg-4-5 {
-    width: 80%;
-  }
-  .col-lg-4-6 {
-    width: 66.6666%;
-  }
-  .col-lg-4-7 {
-    width: 57.1428%;
-  }
-
-  .col-lg-4-9 {
-    width: 44.4444%;
-  }
-  .col-lg-4-10 {
-    width: 40%;
-  }
-
-  .col-lg-5-6 {
-    width: 83.3333%;
-  }
-  .col-lg-5-7 {
-    width: 71.4285%;
-  }
-  .col-lg-5-8 {
-    width: 62.5%;
-  }
-  .col-lg-5-9 {
-    width: 55.5555%;
-  }
-
-  .col-lg-6-7 {
-    width: 82.7142%;
-  }
-  .col-lg-6-8 {
-    width: 75%;
-  }
-  .col-lg-6-9 {
-    width: 66.6666%;
-  }
-  .col-lg-6-10 {
-    width: 60%;
-  }
-
-  .col-lg-7-8 {
-    width: 87.5%;
-  }
-  .col-lg-7-9 {
-    width: 77.7777%;
-  }
-  .col-lg-7-10 {
-    width: 70%;
-  }
-
-  .col-lg-8-9 {
-    width: 88.8888%;
-  }
-  .col-lg-8-10 {
-    width: 80%;
-  }
-
-  .col-lg-9-10 {
-    width: 90%;
-  }
 }
-
-/*
-	* ≥ 1280px
-*/
-@media (min-width: 1280px) {
-  .col-xl-1 {
-    width: 100% !important;
-  }
-
-  .col-xl-hide {
-    display: none !important;
-  }
-  .col-xl-show {
-    display: block !important;
-  }
-
-  .col-xl-2,
-  .col-xl-1-2,
-  .col-xl-5-10,
-  .col-xl-4-8,
-  .col-xl-3-6,
-  .col-xl-2-4 {
-    width: 50%;
-  }
-
-  .col-xl-3,
-  .col-xl-1-3,
-  .col-xl-3-9,
-  .col-xl-2-6 {
-    width: 33.3333%;
-  }
-
-  .col-xl-4,
-  .col-xl-1-4,
-  .col-xl-2-8 {
-    width: 25%;
-  }
-
-  .col-xl-5,
-  .col-xl-1-5,
-  .col-xl-2-10 {
-    width: 20%;
-  }
-
-  .col-xl-6,
-  .col-xl-1-6 {
-    width: 16.6666%;
-  }
-
-  .col-xl-7,
-  .col-xl-1-7 {
-    width: 14.2857%;
-  }
-
-  .col-xl-8,
-  .col-xl-1-8 {
-    width: 12.5%;
-  }
-
-  .col-xl-9,
-  .col-xl-1-9 {
-    width: 11.1111%;
-  }
-
-  .col-xl-10,
-  .col-xl-1-10 {
-    width: 10%;
-  }
-
-  .col-xl-2-3 {
-    width: 66.6666%;
-  }
-
-  .col-xl-2-5 {
-    width: 40%;
-  }
-
-  .col-xl-2-7 {
-    width: 28.5714%;
-  }
-
-  .col-xl-2-9 {
-    width: 22.2222%;
-  }
-
-  .col-xl-3-4 {
-    width: 75%;
-  }
-  .col-xl-3-5 {
-    width: 60%;
-  }
-
-  .col-xl-3-7 {
-    width: 42.8571%;
-  }
-  .col-xl-3-8 {
-    width: 37.5%;
-  }
-
-  .col-xl-3-10 {
-    width: 30%;
-  }
-
-  .col-xl-4-5 {
-    width: 80%;
-  }
-  .col-xl-4-6 {
-    width: 66.6666%;
-  }
-  .col-xl-4-7 {
-    width: 57.1428%;
-  }
-
-  .col-xl-4-9 {
-    width: 44.4444%;
-  }
-  .col-xl-4-10 {
-    width: 40%;
-  }
-
-  .col-xl-5-6 {
-    width: 83.3333%;
-  }
-  .col-xl-5-7 {
-    width: 71.4285%;
-  }
-  .col-xl-5-8 {
-    width: 62.5%;
-  }
-  .col-xl-5-9 {
-    width: 55.5555%;
-  }
-
-  .col-xl-6-7 {
-    width: 82.7142%;
-  }
-  .col-xl-6-8 {
-    width: 75%;
-  }
-  .col-xl-6-9 {
-    width: 66.6666%;
-  }
-  .col-xl-6-10 {
-    width: 60%;
-  }
-
-  .col-xl-7-8 {
-    width: 87.5%;
-  }
-  .col-xl-7-9 {
-    width: 77.7777%;
-  }
-  .col-xl-7-10 {
-    width: 70%;
-  }
-
-  .col-xl-8-9 {
-    width: 88.8888%;
-  }
-  .col-xl-8-10 {
-    width: 80%;
-  }
-
-  .col-xl-9-10 {
-    width: 90%;
-  }
-}
-
-
-/* @media screen and (max-width: 600px) {
-  .side-nav nav {
-    flex-direction: column;
-    align-items: cente;
-  }
-  .side-nav a:not(:first-child) {
-    display: none;
-  }
-  .side-nav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .side-nav.responsive {
-    position: relative;
-  }
-  .side-nav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .side-nav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .articles {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  nav{
- margin: 20px 0 20px 0;
-  }
-
-  }
-@media screen and (max-width: 480px) {
-  .side-nav {
-    width: 40px;
-  }
-  .side-nav ul li {
-    text-align: center;
-  }
-  .side-nav ul li span:nth-child(2) {
-    display: none;
-  }
-  .side-nav ul li i {
-    font-size: 26px;
-  }
-  .main-content {
-    margin-left: 80px;
-  }
-  .articles {
-    flex-direction: column;
-  }
-  .personalArticles {
-    display: none;
-}
-nav{
-  width: 100%;
-}
-
-}
-
-@media screen and (min-width: 1024px) {
-  .side-nav {
-    width: 200px;
-  }
-  .side-nav ul li {
-    text-align: left;
-  }
-  .side-nav ul li span:nth-child(2) {
-    display: inline;
-  }
-  .side-nav ul li i {
-    font-size: 16px;
-  }
-  .main-content {
-    margin-left: 200px;
-  }
-}
-.articles {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-} 
