--- a/blog/blog.css
+++ b/blog/blog.css
@@ -242,6 +242,7 @@ footer {
   }
   .personalArticles {
     display: flex;
+    flex-direction: column;
   }
 }
 @media screen and (max-width: 480px) {
